--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,16 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
 certifi==2025.11.12
+cffi==2.0.0
 click==8.3.1
+cryptography==46.0.3
 dnspython==2.8.0
 email-validator==2.3.0
 fastapi==0.124.2
 fastapi-cli==0.0.16
 fastapi-cloud-cli==0.6.0
 fastar==0.8.0
+greenlet==3.3.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
@@ -22,11 +25,14 @@ MarkupSafe==3.0.3
 mdurl==0.1.2
 multidict==6.7.0
 pamqp==3.3.0
+passlib==1.7.4
 pika==1.3.2
 propcache==0.4.1
+pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
 Pygments==2.19.2
+PyJWT==2.10.1
 python-dotenv==1.2.1
 python-multipart==0.0.20
 PyYAML==6.0.3
@@ -35,6 +41,8 @@ rich-toolkit==0.17.0
 rignore==0.7.6
 sentry-sdk==2.47.0
 shellingham==1.5.4
+SQLAlchemy==2.0.45
+sqlmodel==0.0.27
 starlette==0.50.0
 typer==0.20.0
 typing-inspection==0.4.2
